# pdf-ocr-finder

./: .gitignore  LICENSE  README.md  buscar_en_pdf.py  pyproject.toml  requirements.txt
examples/: example_search.py
src/: ocr.py  search.py
