[project]
name = "pdf-ocr-finder"
version = "0.1.0"
description = "Lightweight toolkit to search text inside scanned PDFs using OCR"
authors = [{ name = "Hugo Romero" }]
dependencies = [
    "pytesseract",
    "pdf2image",
    "pillow"
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]